# document-intelligent-hub

./: .env.example  .env.mcp.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sonarqube-suppressions.json  AUTO_DETECTION_EXAMPLES.md  CI_CD_FIXES.md  CONTRIBUTING.md  CONVERSATION_MEMORY.md  DOCKER_DEPLOY.md  DOCUMENT_CRUD_GUIDE.md  FRONTEND_TEST_SUMMARY.md  INVITATION_CODE_SECURITY.md  Makefile  QUALITY_GATE.md  README.md  SONARQUBE_RESOLUTION.md  TIER_BUGFIX_SUMMARY.md  USE_CASE_GUIDE.md  UX_REFACTOR_V4.md  branch_name.md  docker-compose.yml  publish-wiki.sh  run-coverage.sh  setup.sh  sonar-project.properties  test.sh
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/wiki/: Backend-Architecture.md  Common-Issues.md  Configuration.md  Frontend-Architecture.md  Home.md  Installation-Guide.md  Pre-Commit-Hooks.md  Project-Structure.md  Quick-Start.md  RAG-Chat-System.md  State-Management.md
.github/workflows/: ci-cd.yml  quality-gate.yml
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  AUTHENTICATION_API.md  AUTHENTICATION_COMPLETE.md  AUTH_QUICK_REFERENCE.md  Dockerfile  FIREBASE_SETUP.md  README.md  coverage.lcov  debug_user_tier.py  main.py  mypy.ini  pyproject.toml  pytest.ini  replace_prints.py  set_unlimited_tier.py  test_bug_report_archive.py  test_bug_report_attachment.py  test_document_crud.py  test_format.py  test_reformulation.py
backend/app/: pylint_error_sample.py
backend/app/config/: languages.py  security_constants.py
backend/app/core/: auth.py  config.py  constants.py  firebase.py  logging.py  security.py  test_temp.py
backend/app/db/: chroma_client.py
backend/app/repositories/: __init__.py  dependencies.py  vector_store_repository.py
backend/app/routers/: auth_router.py  documents_router.py  documents_router_old.py  language_router.py  query_router.py  rag_router.py  support_router.py  translation_router.py
backend/app/schemas/: auth_schema.py  language_schema.py  rag.py  rag_schema.py  translation_schema.py  use_cases.py
backend/app/services/: answer_generation_service.py  conversation_service.py  document_classifier_service.py  document_indexing_service.py  document_management_service.py  email_service.py  language_detection_service.py  language_service.py  prompt_template_service.py  query_expansion_service.py  query_parser_service.py  query_processing_service.py  rag_orchestrator_service.py  rag_service.py  reranking_service.py  tier_limit_service.py  translation_service.py  usage_tracking_service.py  use_case_detection_service.py
backend/config/: README.md  classification_prompt.txt.example  query_reformulation_prompt.txt.example  rag_system_prompt.txt.example
backend/examples/: README.md  query_parser_demo.py  sources_in_answer_demo.py  test_registration_setup.py  test_use_cases_api.py
backend/scripts/: setup_tier_limits.py
backend/tests/: TEST_COVERAGE_REPORT.md  conftest.py  test_auth_endpoints_integration.py  test_auth_helpers.py  test_bug_report.py  test_bug_report_archive.py  test_bug_report_attachment.py  test_bug_report_video.py  test_document_classifier.py  test_document_crud.py  test_invitation_code.py  test_query_parser.py  test_rag_endpoints.py  test_rag_service_unit.py  test_reformulation.py  test_structural_fallback.py  test_usage_tracking.py  test_use_case_detection.py  test_use_cases.py  test_vector_store_repository.py
frontend/: .dockerignore  .prettierignore  .prettierrc  COVERAGE_REPORT.md  Dockerfile  FIRESTORE_CONVERSATIONS.md  FIRESTORE_SETUP.md  IMPLEMENTATION_SUMMARY.md  README_STRUCTURE.md  STATE_MANAGEMENT.md  TESTING.md  VERCEL_AI_INTEGRATION.md  eslint.config.mjs  firestore.rules  next.config.ts  package-lock.json  package.json  tailwind.config.js  test-dark-mode.html  test-temp-complexity.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AlertMessage.tsx  BugReportModal.tsx  ChatMessageDisplay.tsx  ChatSection.tsx  ConfirmModal.tsx  ConversationList.tsx  DeleteAccountModal.tsx  DocumentList.tsx  DocumentListSkeleton.tsx  DocumentManager.tsx  DocumentModal.tsx  FeedbackModal.tsx  InvitationCodeModal.tsx  LanguageSelector.tsx  LoginForm.tsx  MobileActionSheet.tsx  OutputLanguageSelector.tsx  ProtectedRoute.tsx  RenameModal.tsx  RequestCodeModal.tsx  RightSidebar.tsx  SaveModal.tsx  ServerOfflineBanner.tsx  Sidebar.tsx  SignupForm.tsx  TierBadge.tsx  TierLimitsDisplay.tsx  TopBar.tsx  UploadModal.tsx  UploadProgress.tsx  UploadSection.tsx  UseCaseSelector.tsx  UserProfile.tsx
frontend/components/BugReportModal/: BugReportFileAttachment.tsx  BugReportModalHeader.tsx  BugReportModalInfo.tsx  BugReportStatusMessages.tsx  bugReportApi.ts  fileValidation.ts  useBugReportForm.ts
frontend/components/ChatSection/: ChatEmptyState.tsx  ChatInputActions.tsx  ChatLoadingSkeleton.tsx  chatHelpers.ts  placeholderText.ts  useChatScroll.ts  useLanguageFlag.ts  useTextareaResize.ts
frontend/components/DocumentList/: DocumentContextMenu.tsx  DocumentItem.tsx  useDocumentMenu.ts  (+1 more)
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useChatAI.ts  useConversationSummary.ts  useConversations.ts  useDocumentStatus.ts  useDocumentUpload.ts  useDocuments.ts  useMobileGestures.ts  useQueryUsage.ts  useRAGChat.ts  useRegistration.ts  useServerStatus.ts  useTheme.ts  useUploadProgress.ts  useUserId.ts  useUserTier.ts
frontend/lib/: authService.ts  constants.ts  conversationsService.ts  env.config.ts  firebase.ts  languages.ts  types.ts
frontend/providers/: QueryProvider.tsx
frontend/stores/: uiStore.ts
frontend/test/: BugReportModal.test.tsx  __coverage-helper.test.ts  invitation-code.test.ts  setup.ts
quality-gate-reports/: quality-gate-index.html  report-data.json
scripts/: README.md  generate-report-data.py  parse-eslint-output.py  quality-gate  quality-gate-index.html  quality-gate-matrix.css  quality-gate-report.js  quality-gate-template.html  quality-gate.sh
(+25 files in other folders)
