[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI RAG API with FastAPI and LangChain"
authors = ["Andrea Ragalzi <andrea.ragalzi.code@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
pydantic-settings = "^2.11.0"
langchain = "^1.0.5"
langchain-openai = "^1.0.2"
pypdf = "^6.2.0"
chromadb = "^1.3.4"
langchain-text-splitters = "^1.0.0"
langchain-community = "^0.4.1"
python-multipart = "^0.0.20"
cohere = "^5.20.0"
rank-bm25 = "^0.2.2"
unstructured = { extras = ["pdf"], version = "^0.18.18" }
langchain-chroma = "^1.0.0"
langdetect = "^1.0.9"
translate = "^3.8.0"
sendgrid = "^6.12.5"
python-dotenv = "^1.2.1"
firebase-admin = "^7.1.0"
aiofiles = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.19.0"
pylint = "^3.3.9"
lizard = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Type checking - Firebase Admin SDK has incomplete stubs
[tool.pyright]
ignore = ["**/__pycache__", "**/chroma_db"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportGeneralTypeIssues = false

# MyPy configuration
# Standard MyPy configuration file
# Goal: Enable strict checking for maximum type safety

[tool.mypy]
# ----------------------------------------------------------------------
# GLOBAL SETTINGS
# ----------------------------------------------------------------------

# Python version target
python_version = "3.12"

# 1. ENABLE STRICT MODE (Recommended for modern projects)
# Enabling this option is equivalent to enabling almost all "questionable" flags
# ensuring maximum rigor in type checking
strict = true

# 2. PATH DEFINITIONS AND FILES TO EXCLUDE
# Directories and files to ignore. Crucial to ignore virtual environments and external dependencies
exclude = [
    "^.venv/",
    "^node_modules/",
    "^chroma_db/",
    "^__pycache__/",
    "^htmlcov/",
]

# 3. REPORTING SETTINGS
# Show columns and error message names
show_column_numbers = true
show_error_codes = true
pretty = true
warn_unused_configs = true

# ----------------------------------------------------------------------
# STRICT RULES (Enabled by strict mode, but explicit here for clarity)
# ----------------------------------------------------------------------

# Working without type hints is prohibited, except for functions decorated with @no_type_check
disallow_untyped_defs = true

# All functions must specify return type
warn_return_any = true

# Ensures input and output types are consistent (covariance and contravariance)
strict_equality = true

# Checks correctness of raised exceptions
check_untyped_defs = true

# Prohibits use of 'Any' type unless explicit and justified
disallow_any_unimported = false  # Set to false for greater tolerance on external libraries
disallow_any_expr = false        # Kept False for tolerance on external libraries
disallow_any_decorated = false   # Adjusted for decorator compatibility
disallow_any_generics = true

# Treat files without type hints as an error
implicit_reexport = false
no_implicit_optional = true

# ----------------------------------------------------------------------
# THIRD-PARTY MODULES (For libraries without stub types)
# ----------------------------------------------------------------------

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "langdetect",
    "translate",
    "sendgrid",
    "sendgrid.helpers.mail",
    "firebase_admin",
    "firebase_admin.*",
    "google.cloud.firestore",
]
ignore_missing_imports = true
